--- a/public/css/css.css
+++ b/public/css/css.css
@@ -244,11 +244,54 @@ th{
   height: 400px; 
   text-align: center;
 }
+.gambar2{
+  width: 300px;
+  position: inherit;
+  height: 500px; 
+  text-align: center;
+}
 .gambarSimpan{
   width: 200px;
   height: 80px;
   position: inherit;
 }
+
+.dropbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: inherit;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+</style>
+
 @media screen and (max-width: 780px) {
 
   header, 
